--- a/App/Code/youngandroidproject/project.properties
+++ b/App/Code/youngandroidproject/project.properties
@@ -3,14 +3,15 @@ name=BluetoothAppTrial3
 assets=../assets
 source=../src
 build=../build
+icon=baseline_library_books_black_18dp.png
 versioncode=1
 versionname=1.0
 useslocation=False
 aname=BluetoothApp
 sizing=Fixed
 showlistsasjson=False
-actionbar=False
-theme=Classic
-color.primary=&HFF3F51B5
+actionbar=True
+theme=AppTheme.Light
+color.primary=&H00FFFFFF
 color.primary.dark=&HFF303F9F
-color.accent=&HFFFF4081
+color.accent=&H00FFFFFF
